test/recursiveFunctionReturn10.slq
// args: --run

def foo(n:!â„•):never{
	def baz(n:!â„•):never{
		return bar(n)+baz(n sub 1); // error
	}
	return baz(n);
}

def bar(n:!â„•):!ğ”¹{
	if nâ‰ 0{ return foo(n sub 1)+1; }
	return 0:!ğ”¹;
}

def main()â‡’foo(10);
